fix: wrong padding at NavTab

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,7 @@
 }
 
 .section {
-  padding: 0 18px;
+  padding-inline: 18px;
 }
 
 @media (min-width: 768px) {
